게임이 끝난 후 덱을 재사용할 수 있도록 덱 초기화 메소드 추가함